--- a/src/app/features/jobs/job-item/job-item.component.css
+++ b/src/app/features/jobs/job-item/job-item.component.css
@@ -1,50 +1,47 @@
 .job-item {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #dad6d6;
-    padding: 10px 0;
-  }
-  
-  .company-logo img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 20px;
-  }
-  .job-details {
-    flex-grow: 1;
-  }
-  
-  .job-details a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .favorite-icon {
-    cursor: pointer;
-    color: #ccc;
-    font-size: 24px;
-  }
-  
-  .favorite-icon.active {
-    color: gold;
-  }
-  
-  span.icon-star {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    background-color: gray;
-    cursor: pointer;
-  }
-  
-  span.icon-star.active {
-    background-color: gold; 
-  }
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #dad6d6;
+  padding: 10px 0;
+}
 
-  .reference{
-      margin-left: 15px;
-  }
-.info{
-    font-size: 13px;
+.company-logo img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+.job-details {
+  flex-grow: 1;
+}
+
+.job-details a {
+  color: #333;
+  text-decoration: none;
+}
+
+.favorite-icon {
+  cursor: pointer;
+  color: #ccc;
+  font-size: 24px;
+}
+
+span.icon-star {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-color: gray;
+  cursor: pointer;
+}
+
+span.icon-star.active, span.icon-star:hover {
+  background-color: gold;
+  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='rgb(228, 228, 14)' stroke='%23fdfdfd' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolygon points='12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2'%3E%3C/polygon%3E%3C/svg%3E");
+}
+
+.reference {
+  margin-left: 15px;
+}
+.info {
+  font-size: 13px;
 }
