--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -35,12 +35,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #343a40;
+    color: #676d72
   }
-  /* Style pour le conteneur centré */
-.content-container {
-    width: 80%;
-    margin: 0 auto; /* Centre le contenu horizontalement */
-  }
-  
   
