--- a/src/app/features/jobs/favorite-jobs/favorite-jobs.component.html
+++ b/src/app/features/jobs/favorite-jobs/favorite-jobs.component.html
@@ -7,9 +7,8 @@
                 </app-job-item>
             </div>
         </ng-container>
-        <div *ngIf="favoriteJobs.length === 0" class="mt-3">
-            <p>No favorite jobs.</p>
+        <div *ngIf="favoriteJobs.length === 0" class="mt-3 d-flex justify-content-center align-items-center">
+            <p class="text-center">No favorite selected.</p>
         </div>
     </div>
-
 </div>
